--- a/quotes.css
+++ b/quotes.css
@@ -6,10 +6,12 @@
 .quote-box {
     width: 600px;
     height: auto;
-    border: 1px solid black;
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    border-radius: 5px;
     font-size: 25px;
     padding: 15px;
     margin: auto;
+    box-shadow: 4px 4px grey;
 }
 
 .author {
@@ -20,9 +22,19 @@
 .new-quote {
     margin: 5px;
     border-radius: 5px;
-    border: 1px solid black;
+    border: 1px solid transparent;
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     padding: 5px;
     cursor: pointer;
+    transition: .5s;
+}
+
+.new-quote:hover {
+    border: 1px solid rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+    transition: .5s;
 }
 
 .new-quote:focus {
