--- a/quotes.css
+++ b/quotes.css
@@ -23,7 +23,7 @@
     margin: 5px;
     border-radius: 5px;
     border: 1px solid transparent;
-    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.5);
     color: rgb(255, 255, 255);
     padding: 5px;
     cursor: pointer;
@@ -31,7 +31,7 @@
 }
 
 .new-quote:hover {
-    border: 1px solid rgb(0, 0, 0);
+    border: 1px solid rgba(0, 0, 0, 0.3);
     background-color: rgb(255, 255, 255);
     color: rgb(0, 0, 0);
     transition: .5s;
